--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import "https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.css";
+
 :root {
   font-family: 'Montserrat', sans-serif;
   line-height: 1.5;
