--- a/src/pages/apointment/apointment.css
+++ b/src/pages/apointment/apointment.css
@@ -134,17 +134,17 @@
 
     #apointmentContain{
         width:100%;
-        height: 150%;
-        padding-top: 3rem;
+        height: 120%;
+        padding-top: 2rem;
     }
 
     #apointmentContentLeft form{
         height: 90%;
-        width: 95%;
+        width: 100%;
     }
     
     #apointmentContentLeft form .inputs{
-        width:90%;
+        width:95%;
         height: 4rem;
         padding: 10px;
         border: 0.5px solid black;
@@ -155,11 +155,12 @@
     }
 
     #bigBox{
-        width:90%;
+        width:95%;
     }
     
     #apointmentContentLeft form button{
-        width:92%;
+        width:97%;
+        height: 4.3rem;
         font-size: 1.5rem;
     }
     #not{
