--- a/src/pages/hero/heroStyles.css
+++ b/src/pages/hero/heroStyles.css
@@ -104,8 +104,9 @@
         }
 
         #content{
-            width:85%;
+            width:90%;
             height: 80%;
+            margin:0;
         }
     
         #content h1{
@@ -143,9 +144,9 @@
         }
   
         #contentWrap{
-        display: flex;
-        justify-content: center;
-        align-items: center;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
         .mobileNav{
@@ -161,31 +162,29 @@
             width: 100%;
             height: 10%;
             display: flex;
-            justify-content: space-between;
-            align-items: center;
+            justify-content: center;
             border-bottom: 1px solid black;
         }
+        #navMobileHwrap{
+            width: 90%;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
         #navMobileH span{
-            width: 60%;
+            width: 70%;
             font-size: 1.2rem;
             font-weight: bold;
             color: limegreen;
-            margin-left:5px;
         }
         #closeN{
             display: flex;
-            padding-right: 2rem;
             justify-content: flex-end;
             align-items: center;
-            width: 30%;
         }
         #closeN img{
-            width: 70%;
-            height: 70%;
-        }
-        #navMobileH img{
-            width: 30px;
-            height: 30px;
+            width: 25px;
+            height: 25px;
         }
         #bodyWrap{
             width: 100%;
@@ -217,6 +216,12 @@
     }
 
     @media (max-width: 768px) and (max-height: 750px) {
+        #navMobileHwrap{
+            width: 90%;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
         #content{
             width:88%;
             height: 90%;
@@ -237,7 +242,7 @@
       }
 
       @media (min-width: 768px) and (max-width: 1024px) {
-
+      
         #content{
             width:80%;
             height: 70%;
@@ -297,33 +302,33 @@
             width: 100%;
             height: 10%;
             display: flex;
-            justify-content: space-between;
-            align-items: center;
             border-bottom: 1px solid black;
-            padding:0px 10px;
+            justify-content: center;
         }
+
+        #navMobileHwrap{
+            width: 85%;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+
         #navMobileH span{
-            width: 60%;
-            font-size: 1.7rem;
+            width: 70%;
+            font-size: 1.2rem;
             font-weight: bold;
             color: limegreen;
-            margin-left:5px;
         }
         #closeN{
             display: flex;
-            padding-right: 4rem;
             justify-content: flex-end;
             align-items: center;
-            width: 35%;
         }
         #closeN img{
-            width: 80%;
-            height: 80%;
+            width: 30px;
+            height: 30px;
         }
-        #navMobileH img{
-            width: 40px;
-            height: 40px;
-        }
+
         #bodyWrap{
             width: 100%;
             height: 90%;
