--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -113,7 +113,6 @@
         width:250px;
         height:250px;
         border-radius: 50%;
-    
     }
     
     #circle2{
@@ -126,7 +125,7 @@
 
     #aboutContain{
         flex-direction: column;
-        padding-top: 14rem;
+        padding-top: 13rem;
         align-items: center;
         width:100%;
         height: 200%;
@@ -159,21 +158,21 @@
         height:100%;
     }
     #aboutContain h1{
-        font-size: 2rem;
+        font-size: 1.8rem;
         font-weight: bold;
-        margin-bottom: 2rem;
+        margin-bottom: 3rem;
     }
     
     #aTextMain{
-        font-size: 1.1rem;
+        font-size: 1rem;
         line-height: 25px;
         text-align: center;
-        margin-bottom: 2rem;
+        margin-bottom: 1rem;
     }
 
     #aboutContentTxtContain h1{
         text-align: center;
-        font-size: 2rem;
+        font-size: 1.8rem;
         margin-bottom: 1rem;
     }
     
@@ -182,37 +181,11 @@
     }
     
     #aboutContentTxtContain li{
-        font-size: 1.1rem;
-        margin-bottom:2rem;
+        font-size: 1rem;
+        margin-bottom:1rem;
         text-align: center;
     }
 }
-
-@media (max-width: 768px) and (max-height: 750px) {
-    #circle1{
-        top:-30px;
-        left:-30px;
-        width:150px;
-        height:150px;
-    }
-    
-    #circle2{
-        width:150px;
-        height:150px;
-        bottom: -30px;
-        right: -30px;
-    } 
-    #aboutContain{
-        padding-top:5rem;
-        height: 280%;
-    }
-    #aboutContent{
-        margin-top: 1rem;
-        gap:0rem;
-        width:85%;
-        height: 85%;
-    }
-  }
 
   @media (min-width: 768px) and (max-width: 1024px) {
     #circle1{
@@ -221,7 +194,6 @@
         width:250px;
         height:250px;
         border-radius: 50%;
-    
     }
     
     #circle2{
@@ -237,7 +209,7 @@
         padding-top: 12rem;
         align-items: center;
         width:100%;
-        height: 170%;
+        height: 180%;
         position: relative;
         overflow: hidden;
     }
@@ -267,16 +239,16 @@
         height:100%;
     }
     #aboutContain h1{
-        font-size: 4rem;
+        font-size: 2rem;
         font-weight: bold;
         margin-bottom: 5px;
     }
     
     #aTextMain{
         font-size: 1.2rem;
-        line-height: 30px;
+        line-height: 35px;
         text-align: center;
-        margin-bottom: 2rem;
+        margin-bottom: 4rem;
     }
 
     #aboutContentTxtContain h1{
@@ -295,3 +267,48 @@
         text-align: center;
     }
   }
+
+  /* @media (min-width: 768px) and (max-height: 1190px) {
+    #aboutContain{
+        height: 150%;
+    }
+  } 
+ */
+
+   @media (max-width: 768px) and (max-height: 740px) {
+    #aboutContain{
+        height: 220%;
+        padding-top: 8rem;
+    }
+    #aboutContentTxtContain h1{
+        text-align: center;
+        font-size: 1.5rem;
+        margin-bottom: 5px;
+    }
+    #aTextMain{
+        font-size: 1rem;
+        line-height: 20px;
+        text-align: center;
+        margin-bottom: 1rem;
+    }
+    #circle1{
+        top:-30px;
+        left:-40px;
+        width:150px;
+        height:150px;
+        border-radius: 50%;
+    }
+    
+    #circle2{
+        width:150px;
+        height:150px;
+        border-radius: 50%;
+        bottom: -30px;
+        right: -50px;
+    } 
+    #aboutContentTxtContain li{
+        font-size: 1rem;
+        margin-bottom:1rem;
+        text-align: center;
+    }
+} 
