--- a/src/pages/nav/nav.css
+++ b/src/pages/nav/nav.css
@@ -119,6 +119,13 @@
     }
 }
 
+@media (max-width: 768px) and (max-height: 740px) {
+    #navImg{
+        width:2rem;
+        height:2rem;
+    }
+}
+
 @media (min-width: 768px) and (max-width: 1024px) {
     #listItems{
         display: none;
@@ -132,7 +139,7 @@
         display: flex;
         align-items: center;
         width:50%;
-        padding-left: 20px;
+        padding-left: 2rem;
         gap: 1.5rem;
     }
 
@@ -154,9 +161,7 @@
     }
 
     #navImg{
-        width: 55px;
-        height: 55px;
+        width:3rem;
+        height: 3rem;
     }
-
-
 }
